<resources>
    <string name="app_name">UCredit Essentials</string>
    <string name="email_address_or_user_name">Email Address or User name</string>
    <string name="email_address">Email Address</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="create_account">Create Account</string>
    <string name="create_acc"><u>Create Account</u></string>
    <string name="or">or</string>
    <string name="facebook_description">This ispublic static final String TAG_REGISTER = "register"; the Facebook button</string>
    <string name="google_plus_description">This is the Google+ button</string>
    <string name="ucredit_united_saccos">UCREDIT United SACCOs</string>
    <string name="phone_number">Phone Number</string>
    <string name="forgot_change_password"><u>Forgot/Change Password</u></string>
    <string name="profile_image_description">This is the profile image</string>
    <string name="name_placeholder">User Name</string>
    <string name="current_date">Current Date</string>
    <string name="nav_balance_statement">Balance and Statement</string>
    <string name="nav_loan_application">Loan Application</string>
    <string name="nav_bill_payments">Bill Payments</string>
    <string name="nav_inter_account_transfer">Inter Account Transfer</string>
    <string name="nav_fixed_deposit">Fixed Deposit</string>
    <string name="nav_standing_orders">Standing Orders</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_forex">Forex</string>
    <string name="nav_list_saccos">View SACCOs</string>
    <string name="nav_sacco_locations">SACCO Locations</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log Out</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="sacco_icon_description">This is the sacco icon</string>
    <string name="title_placeholder">SACCO Name</string>
    <string name="date_placeholder">Date of SACCO creation</string>
    <string name="status_placeholder">SACCO status</string>
    <string name="see_more_description">See More about SACCO</string>
    <string name="registered_saccos">Registered Saccos</string>
    <string name="icon_for_saccos_generally">Icon for SACCOs generally</string>
    <string name="membership_type">Type of membership</string>
    <string name="registered_title">Registered by Sasra</string>
    <string name="registration_date">Date Registered by Sasra</string>
    <string name="sacco_category">Sacco Category</string>
    <string name="last_agm_date">Last AGM Date</string>
    <string name="county">County</string>
    <string name="country">Country</string>
    <string name="management_type">Management type</string>
    <string name="sacco_registration_number">Sacco Registration Number</string>
    <string name="products">Products</string>
    <string name="sacco_name">Sacco Name</string>
    <string name="sacco_website">Sacco Website</string>
    <string name="sacco_email_address">Sacco Email Address</string>
    <string name="sacco_phone_number">Sacco Phone Number</string>
    <string name="details">Details</string>
    <string name="loan_products">Loan Types</string>
    <string name="savings_products">Savings Types</string>
    <string name="investment_products">Investment Types</string>
    <string name="hash">#</string>
    <string name="product">Product</string>
    <string name="rates">Rates</string>
    <string name="modified_date">Modified Date</string>
    <string name="rate_placeholder">n%</string>
    <string name="number_placeholder">No.</string>
    <string name="register">Register</string>
    <string name="move">Move</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="view_saccos">View Saccos</string>
    <string name="redirect_home_description">This button redirects to home page</string>
    <string name="submit">Submit</string>
    <string name="email_address_placeholder">Email Address</string>
    <string name="edit_profile_placeholder">Edit Profile</string>
    <string name="add_sacco">Add Sacco</string>
    <string name="sync_message">Are you a member of a SACCO?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>
