<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/or_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="#000"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/or_text_view"
        android:layout_margin="20dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/facebook_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_toStartOf="@id/google_plus_btn"
            android:contentDescription="@string/facebook_description"
            android:src="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/google_plus_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_circle"
            android:contentDescription="@string/google_plus_description"
            android:src="@drawable/ic_google_plus_icon" />

    </RelativeLayout>

</RelativeLayout>
