<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_backdrop_height"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fitsSystemWindows="true"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleTextAppearance="@android:color/transparent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white">

                    <ImageView
                        android:id="@+id/view_saccos_backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/icon_for_saccos_generally"
                        android:fitsSystemWindows="true"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax" />

                </RelativeLayout>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                    <LinearLayout
                        android:id="@+id/sacco_details_linear_layout1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:text="@string/sacco_name"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:text="@string/sacco_website"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/sacco_details_linear_layout2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@id/sacco_details_linear_layout1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:text="@string/sacco_email_address"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:text="@string/sacco_phone_number"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/details"
                    android:textColor="@color/colorSomething"
                    android:textSize="20sp" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TableRow
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/type_title"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:text="@string/membership_type"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/type_details"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </TableRow>

                    <TableRow
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/registered_title"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:text="@string/registered_title"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/registered_details"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </TableRow>

                    <TableRow
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/registration_date_title"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:text="@string/registration_date"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/registration_date_details"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </TableRow>

                    <TableRow
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/category_title"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:text="@string/sacco_category"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/category_details"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </TableRow>

                    <TableRow
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/agm_title"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:text="@string/last_agm_date"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/agm_details"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </TableRow>

                    <TableRow
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/county_title"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:text="@string/county"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/county_details"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </TableRow>

                    <TableRow
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/country_title"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:text="@string/country"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/country_details"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </TableRow>

                    <TableRow
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/management_title"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:text="@string/management_type"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/management_details"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </TableRow>

                    <TableRow
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/sacco_regno_title"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:text="@string/sacco_registration_number"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/sacco_regno_details"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <TextView
        android:id="@+id/sacco_products_link"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_rectangle_edges"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:gravity="center"
        android:text="@string/products"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_anchor="@id/scrollview"
        app:layout_anchorGravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>
